syntax = "proto3";

option csharp_namespace = "Board.gRPC";

package board;

// The board service definition.
service BoardService {
  // Sends a greeting
  rpc GetBoard (BoadRequest) returns (BoardResponse);
}

// The request message containing the user's name.
message BoadRequest {
  string projectId = 1;
}

// The response message containing the board.
message BoardResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  string createdBy = 4;
  repeated BoardColumn columns = 5;
}

message BoardColumn{
    string id = 1;
    string name = 2;
}
